testsuite/tests/lkt/base_type/derivation_loop/test.out
== test.lkt ==
test.lkt:15:1: error: Type inheritance loop detected
15 | class AbstractA: AbstractB {
   | ^


lkt_compile: Done
